add file server

--- a/ui/html/partials/header.html
+++ b/ui/html/partials/header.html
@@ -1,5 +1,5 @@
 {{define "Header"}}
-<header>
+<header class="head-section">
     <h1><a href="/">From List</a></h1>
     {{template "Nav" .}}
 </header>
