--- a/ui/html/layout/base.html
+++ b/ui/html/layout/base.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="static/css/style.css">
         <title>{{.Title}}</title>
     </head>
     <body>
@@ -11,5 +12,7 @@
             {{template "content" .}}
         </main>
         {{template "Footer" .}}
+
+        <script src="static/js/script.js"></script>
     </body>
 </html>
