--- a/ui/html/layout/base.html
+++ b/ui/html/layout/base.html
@@ -1,3 +1,4 @@
+{{define "base"}}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -13,6 +14,7 @@
         </main>
         {{template "Footer" .}}
 
-        <script src="static/js/script.js"></script>
+        <script src="static/js/script.js" type="text/javascript"></script>
     </body>
 </html>
+{{end}}
